@@ -1,7 +1,7 @@
 #----------------------------------------------------------------------
 #  Eskil, Merge function
 #
-#  Copyright (c) 1998-2007, Peter Spjuth  (peter.spjuth@gmail.com)
+#  Copyright (c) 1998-2011, Peter Spjuth  (peter.spjuth@gmail.com)
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -19,8 +19,6 @@
 #  Boston, MA 02111-1307, USA.
 #
 #----------------------------------------------------------------------
-# $Revision$
-#----------------------------------------------------------------------
 
 # Get all data from the files to merge
 proc collectMergeData {top} {
@@ -28,6 +26,7 @@ proc collectMergeData {top} {
 
     set diff($top,leftMergeData) {}
     set diff($top,rightMergeData) {}
+    set diff($top,mergeSelection,AnyConflict) 0
 
     if {![info exists ::diff($top,changes)]} {
         set ::diff($top,changes) {}
@@ -72,7 +71,12 @@ proc collectMergeData {top} {
         lappend diff($top,leftMergeData) $data1
         lappend diff($top,rightMergeData) $data2
         set diff($top,mergeSelection,$changeNo) \
-                [WhichSide $top $line1 $n1 $line2 $n2]
+                [WhichSide $top $line1 $n1 $line2 $n2 conflict comment]
+        set diff($top,mergeSelection,Conflict,$changeNo) $conflict
+        set diff($top,mergeSelection,Comment,$changeNo) $comment
+        if {$conflict} {
+            set diff($top,mergeSelection,AnyConflict) 1
+        }
         incr changeNo
     }
     set data1 {}
@@ -102,6 +106,7 @@ proc fillMergeWindow {top} {
     $w delete 1.0 end
     set marks {}
     set t 0
+    set firstConflict -1
     foreach {commLeft diffLeft} $diff($top,leftMergeData) \
             {commRight diffRight} $diff($top,rightMergeData) {
         $w insert end $commRight
@@ -116,6 +121,12 @@ proc fillMergeWindow {top} {
             21 { $w insert end $diffRight merge$t
                 $w insert end $diffLeft merge$t  }
         }
+        if {$diff($top,mergeSelection,Conflict,$t)} {
+            $w tag configure merge$t -background grey
+            if {$firstConflict == -1} {
+                set firstConflict $t
+            }
+        }
         lappend marks mergee$t [$w index insert]
         incr t
     }
@@ -128,14 +139,22 @@ proc fillMergeWindow {top} {
     $w mark set merges$t end
     $w mark set merges[expr {$t + 1}] end
 
-    set diff($top,curMerge) 0
-    set diff($top,curMergeSel) $diff($top,mergeSelection,0)
-    $w tag configure merge0 -foreground red
-    showDiff $top 0
+    set showFirst 0
+    if {$firstConflict != -1} {
+        set showFirst $firstConflict
+    }
+
+    set diff($top,curMerge) $showFirst
+    set diff($top,curMergeSel) $diff($top,mergeSelection,$showFirst)
+    $w tag configure merge$showFirst -foreground red
+    showDiff $top $showFirst
     update
     # If there is any diff, show the first
     if {$t > 0} {
-        seeText $w merges0 mergee0
+        seeText $w merges$showFirst mergee$showFirst
+        # Show status for first chunk
+        set diff($top,mergeStatus) \
+                $diff($top,mergeSelection,Comment,$showFirst)
     }
 }
 
@@ -146,16 +165,38 @@ proc nextMerge {top delta} {
     set w $top.merge.t
     $w tag configure merge$diff($top,curMerge) -foreground ""
 
+    set last [expr {[llength $diff($top,leftMergeData)] / 2 - 1}]
+
+    if {$delta == -1000} {
+        # Search backward for conflict
+        for {set t [expr {$diff($top,curMerge) - 1}]} {$t >= 0} {incr t -1} {
+            if {$diff($top,mergeSelection,Conflict,$t)} {
+                set delta [expr {$t - $diff($top,curMerge)}]
+                break
+            }
+        }
+    } elseif {$delta == 1000} {
+        # Search forward for conflict
+        for {set t [expr {$diff($top,curMerge) + 1}]} {$t <= $last} {incr t} {
+            if {$diff($top,mergeSelection,Conflict,$t)} {
+                set delta [expr {$t - $diff($top,curMerge)}]
+                break
+            }
+        }
+    }
+
     set diff($top,curMerge) [expr {$diff($top,curMerge) + $delta}]
     if {$diff($top,curMerge) < 0} {set diff($top,curMerge) 0}
-    if {$diff($top,curMerge) >= ([llength $diff($top,leftMergeData)] / 2)} {
-        set diff($top,curMerge) \
-                [expr {[llength $diff($top,leftMergeData)] / 2 - 1}]
+    if {$diff($top,curMerge) > $last} {
+        set diff($top,curMerge) $last
     }
     set diff($top,curMergeSel) $diff($top,mergeSelection,$diff($top,curMerge))
     $w tag configure merge$diff($top,curMerge) -foreground red
     showDiff $top $diff($top,curMerge)
     seeText $w merges$diff($top,curMerge) mergee$diff($top,curMerge)
+
+    set diff($top,mergeStatus) \
+            $diff($top,mergeSelection,Comment,$diff($top,curMerge))
 }
 
 # Select a merge setting for all diffs.
@@ -309,6 +350,7 @@ proc closeMerge {top} {
 
 # Create a window to display merge result.
 proc makeMergeWin {top} {
+    collectMergeData $top
     if {![info exists ::diff($top,mergetranslation)]} {
         if {$::tcl_platform(platform) eq "windows"} {
             set ::diff($top,mergetranslation) crlf
@@ -323,6 +365,7 @@ proc makeMergeWin {top} {
     } else {
         destroy {*}[winfo children $w]
     }
+    set anyC $::diff($top,mergeSelection,AnyConflict)
 
     wm title $w "Merge result: [TitleTail $top]"
 
@@ -347,6 +390,19 @@ proc makeMergeWin {top} {
     $w.m.ms add separator
     $w.m.ms add command -label "All Left"  -command "selectMergeAll $top 1"
     $w.m.ms add command -label "All Right" -command "selectMergeAll $top 2"
+
+    $w.m add cascade -label "Goto" -underline 0 -menu $w.m.mg
+    menu $w.m.mg
+    $w.m.mg add command -accelerator "Up" -label "Previous" -command "nextMerge $top -1"
+    $w.m.mg add command -accelerator "Down" -label "Next" -command "nextMerge $top 1"
+    if {$anyC} {
+        $w.m.mg add command -accelerator "Shift-Up" -label "Previous Conflict" -command "nextMerge $top -1000"
+        $w.m.mg add command -accelerator "Shift-Down" -label "Next Conflict" -command "nextMerge $top 1000"
+    } else {
+        $w.m.mg add command -accelerator "Shift-Up" -label "Previous 10" -command "nextMerge $top -10"
+        $w.m.mg add command -accelerator "Shift-Down" -label "Next 10" -command "nextMerge $top 10"
+    }
+    
 
     $w.m add cascade -label "Config" -underline 0 -menu $w.m.mc
     menu $w.m.mc
@@ -375,8 +431,8 @@ proc makeMergeWin {top} {
     bind $w <Key-Left>  "focus $w; set diff($top,curMergeSel) 1; selectMerge $top"
     bind $w <Key-Right> "focus $w; set diff($top,curMergeSel) 2; selectMerge $top"
 
-    ttk::button $w.f.bl -text "All L" -command "selectMergeAll $top 1"
-    ttk::button $w.f.br -text "All R" -command "selectMergeAll $top 2"
+    ttk::button $w.f.bl -text "Prev C" -command "nextMerge $top -1000"
+    ttk::button $w.f.br -text "Next C" -command "nextMerge $top 1000"
     
     ttk::button $w.f.b1 -text "Prev" -command "nextMerge $top -1"
     ttk::button $w.f.b2 -text "Next" -command "nextMerge $top 1"
@@ -391,6 +447,9 @@ proc makeMergeWin {top} {
 
     grid $w.f.rb1 $w.f.rb2 $w.f.rb3 $w.f.rb4 x $w.f.b1 $w.f.b2 x \
             $w.f.bl $w.f.br x $w.f.bs $w.f.bq -sticky we -padx 1
+    if {!$anyC} {
+        grid forget $w.f.bl $w.f.br
+    }
     grid columnconfigure $w.f {4 7 10} -minsize 10
     grid columnconfigure $w.f 10 -weight 1
     grid columnconfigure $w.f {0 1 2 3} -uniform a
@@ -404,6 +463,8 @@ proc makeMergeWin {top} {
 
     bind $w.t <Key-Escape> [list focus $w]
 
+    ttk::label $w.ls -textvariable ::diff($top,mergeStatus)
+
     # Prevent toplevel bindings on keys to fire while in the text widget.
     bindtags $w.t [list Text $w.t $w all]
     bind $w.t <Key-Left>  "break"
@@ -416,15 +477,26 @@ proc makeMergeWin {top} {
     grid $w.f   -      -sticky news -row 0
     grid $w.t   $w.sby -sticky news
     grid $w.sbx x      -sticky we
+    grid $w.ls  -      -sticky we
     grid columnconfigure $w 0 -weight 1
     grid rowconfigure $w 1 -weight 1
 
-    collectMergeData $top
     fillMergeWindow $top
 }
 
-# Compare each file agains an ancestor file for three-way merge
+# Compare each file against an ancestor file for three-way merge
 proc collectAncestorInfo {top dFile1 dFile2 opts} {
+    if {![info exists ::diff($top,mergetranslation)]} {
+        # Try to autodetect line endings in ancestor file
+        set ch [open $::diff($top,ancestorFile) rb]
+        set data [read $ch 10000]
+        close $ch
+        if {[string first \r\n $data] >= 0} {
+            set ::diff($top,mergetranslation) crlf
+        } else {
+            set ::diff($top,mergetranslation) lf
+        }
+    }
     array unset ::diff $top,ancestorLeft,*
     array unset ::diff $top,ancestorRight,*
     set differrA1 [catch {DiffUtil::diffFiles {*}$opts \
@@ -476,12 +548,23 @@ proc collectAncestorInfo {top dFile1 dFile2 opts} {
 }
 
 # Use ancestor info to select which side to use in a merge chunk
-proc WhichSide {top line1 n1 line2 n2} {
+##nagelfar syntax WhichSide x x x x x n n
+proc WhichSide {top line1 n1 line2 n2 conflictName commentName} {
+    upvar 1 $conflictName conflict $commentName comment
+    set conflict 0
+    set comment ""
+    if {$::diff($top,ancestorFile) eq ""} {
+        # No ancestor info, just select right side
+        return 2
+    }
     if {$n1 == 0} {
-        # Only to the right, this can be:
+        # Only to the right
         set delLeft [info exists ::diff($top,ancestorLeft,d$line1)]
         # Inserted to right : Keep right side
-        if {!$delLeft} { return 2 }
+        if {!$delLeft} {
+            set comment "Right: Add"
+            return 2
+        }
 
         for {set t $line2} {$t < $line2 + $n2} {incr t} {
             if {[info exists ::diff($top,ancestorRight,$t)]} {
@@ -489,15 +572,23 @@ proc WhichSide {top line1 n1 line2 n2} {
             }
         }
         # Deleted to left   : Keep left side
-        if {[array size right] == 0} { return 1 }
+        if {[array size right] == 0} {
+            set comment "Left: Delete"
+            return 1
+        }
         # Deleted to left and changed to the right : ?? (right for now)
         # FIXA
+        set comment "*** Left: Delete, Right: Change"
+        set conflict 1
         return 2
     } elseif {$n2 == 0} {
         # Only to the left, this can be:
         set delRight [info exists ::diff($top,ancestorRight,d$line2)]
         # Inserted to left : Keep left side
-        if {!$delRight} { return 1 }
+        if {!$delRight} {
+            set comment "Left: Add"
+            return 1
+        }
 
         for {set t $line1} {$t < $line1 + $n1} {incr t} {
             if {[info exists ::diff($top,ancestorLeft,$t)]} {
@@ -505,32 +596,57 @@ proc WhichSide {top line1 n1 line2 n2} {
             }
         }
         # Deleted to right : Keep right side
-        if {[array size left] == 0} { return 2 }
-        # Deleted to right and changed to the left : ?? (left for now)
+        if {[array size left] == 0} {
+            set comment "Right: Delete"
+            return 2
+        }
+        # Deleted to right and changed to the left : ?? (right for now)
         # FIXA
-        return 1
+        set comment "*** Left: Change, Right: Delete"
+        set conflict 1
+        return 2
     } else {
-        # Changed on both sides, this can be:
+        # Changed on both sides
+
+        # Collect left side info
         for {set t $line1} {$t < $line1 + $n1} {incr t} {
             if {[info exists ::diff($top,ancestorLeft,$t)]} {
                 set left($::diff($top,ancestorLeft,$t)) 1
             }
         }
-        # Changed to the right : Keep right
-        if {[array size left] == 0} { return 2 }
 
+        # No changes against ancestor on left side means it is just
+        # changed to the right : Keep right
+        if {[array size left] == 0} {
+            set comment "Right: Change"
+            return 2
+        }
+
+        # Collect right side info
         for {set t $line2} {$t < $line2 + $n2} {incr t} {
             if {[info exists ::diff($top,ancestorRight,$t)]} {
                 set right($::diff($top,ancestorRight,$t)) 1
             }
         }
 
-        # Changed to the left : Keep left
-        if {[array size right] == 0} { return 1 }
+        # No changes against ancestor on right side means it is just
+        # changed to the left : Keep left
+        if {[array size right] == 0} {
+            set comment "Left: Change"
+            return 1
+        }
 
+        if {[info exists left(a)] && ![info exists left(c)] && \
+                [info exists right(a)] && ![info exists right(c)]} {
+            # Pure add on both sides, keep both
+            set comment "*** Left: Add, Right: Add"
+            set conflict 1
+            return 12
+        }
         # Changed in both, right for now
         # FIXA
+        set comment "*** Left: Change, Right: Change"
+        set conflict 1
         return 2
     }
 }
-
